@@ -1,4 +1,4 @@
-/* Copyright (c) 2001-2015, The HSQL Development Group
+/* Copyright (c) 2001-2016, The HSQL Development Group
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -62,7 +62,7 @@ class OdbcPacketInputStream extends DataInputStream {
     static OdbcPacketInputStream newOdbcPacketInputStream(char cType,
             InputStream streamSource, int sizeInt) throws IOException {
         return newOdbcPacketInputStream(cType, streamSource,
-                                        new Integer(sizeInt));
+                                        Integer.valueOf(sizeInt));
     }
 
     /**
